@@ -1,3 +1,7 @@
+2013-10-02 Paulo Andrade <pcpa@gnu.org>
+
+	* include/lightning/jit_mips.h: Add proper mips abi detection.
+
 2013-10-30 Paulo Andrade <pcpa@gnu.org>
 
 	* lib/jit_print.c: Do not crash if calling jit_print from
